--- a/src/web/html/home.html
+++ b/src/web/html/home.html
@@ -12,7 +12,7 @@
 </head>
 <body>
    <div class="navBar">
-      <div class="title" onclick="gotoHomePage()">AssignExpert &nbsp;<span style="color: #008037; font-size: 4.9vh;">|&nbsp;</span> 
+      <div class="title" onclick="gotoHomePage()" style="margin-top: 0.8vh;">AssignExpert &nbsp;<span style="color: #008037; font-size: 4.9vh;">|&nbsp;</span> 
          <span id="userName" style="font-family: 'Inter', sans-serif; font-weight: 500;"></span>
       </div>
       <div class="navButtons" onclick="gotoSettingPage()"><i class="fa-solid fa-gear settingsIcon"></i></div>
