style: styled view submissions button, hold points toggle and Mark as Complete button

--- a/src/web/html/home.html
+++ b/src/web/html/home.html
@@ -6,6 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <script src="https://kit.fontawesome.com/2965379893.js" crossorigin="anonymous"></script>
    <title>Home - AssignExpert</title>
+   <link rel="stylesheet" type="text/css" href="../../web/css/loadingPage.css" />
    <link rel="stylesheet" type="text/css" href="../../web/css/home.css" />
    <script defer src="../../web/javascript/home.js"></script>
    <script defer src="../../web/javascript/navBar.js"></script>
