--- a/src/web/html/loadingPageTrial.html
+++ b/src/web/html/loadingPageTrial.html
@@ -12,6 +12,6 @@
 <body>
    <img src="../../web/image/logo.png" class="assignExpertLogo">
    <h4 class="punchLine"><span style="font-weight: 700;">Assignment:</span> Complete me now, or regret later</h4>
-   <div class="code borderBlink" id="code"></div>
+   <div class="loadingCode borderBlink" id="loadingCode"></div>
 </body>
 </html>
