--- a/src/web/html/settings.html
+++ b/src/web/html/settings.html
@@ -114,6 +114,22 @@
             if (wantsEmailNotifications !== undefined) {
                 fieldsToUpdate.preferences.wantsEmailNotifications = (wantsEmailNotifications === "true");
             }
+
+            document.body.style.cursor = "wait";
+            const buttons = document.getElementsByTagName("BUTTON");
+            for(let i=0; i<buttons.length; i++) {
+                buttons[i].style.cursor = "wait";
+            }
+            const div = document.getElementsByTagName("div");
+            for(let i=0; i<div.length; i++) {
+                div[i].style.cursor = "wait";
+            }
+
+            const inputs = document.getElementsByTagName("INPUT");
+            for(let i=0; i<inputs.length; i++) {
+                inputs[i].style.cursor = "wait";  
+            }
+
             fetch('/api/user/', {
                 method: 'PUT',
                 headers: {
@@ -123,11 +139,39 @@
                 body: JSON.stringify(fieldsToUpdate)
             })
             .then((res) => {
+                document.body.style.cursor = "default";
+                const buttons = document.getElementsByTagName("BUTTON");
+                for(let i=0; i<buttons.length; i++) {
+                    buttons[i].style.cursor = "default";
+                }
+                const div = document.getElementsByTagName("div");
+                for(let i=0; i<div.length; i++) {
+                    div[i].style.cursor = "default";
+                }
+
+                const inputs = document.getElementsByTagName("INPUT");
+                for(let i=0; i<inputs.length; i++) {
+                    inputs[i].style.cursor = "default";  
+                }
                 console.log(res);
                 localStorage.setItem("user", JSON.stringify(userData));
                 setMessage("Update successful", "green");
             })
             .catch((err) => {
+                document.body.style.cursor = "default";
+                const buttons = document.getElementsByTagName("BUTTON");
+                for(let i=0; i<buttons.length; i++) {
+                    buttons[i].style.cursor = "default";
+                }
+                const div = document.getElementsByTagName("div");
+                for(let i=0; i<div.length; i++) {
+                    div[i].style.cursor = "default";
+                }
+
+                const inputs = document.getElementsByTagName("INPUT");
+                for(let i=0; i<inputs.length; i++) {
+                    inputs[i].style.cursor = "default";  
+                }
                 console.log(err);
                 setMessage(`Update failed ${err?.message}`, "red");
             }).finally(() => {
